# BinaryClassifier

./: .gitignore  CMakeLists.txt  README.md  config.yaml  dataloader.py  main.py  requirements.txt  test.cpp  test.py  train.py
config/: config.yaml
notebooks/: torch2tensorrt.ipynb
notebooks/.ipynb_checkpoints/: torch2tensorrt-checkpoint.ipynb
scripts/: focal_traversky_loss.py  inference_trt.py  main.py  onnx_conversion.py  onnx_trt_conversion.py  tensorrt_testing.py  utils.py
src/: main.cpp
